# mmr-elites

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN_DOC.md  Dockerfile  LICENSE  Makefile  PROJECT_PLAN.md  README.md  analyze_remote.py  benchmark.py  benchmark_arm20.py  bundle_repo.py  experiment.py  experiment_ant.py  experiment_runner.py  map_elites_ant_results.pkl  metrics.py  muse_ant_results.pkl  plot_results.py  policy.py  pyproject.toml  visualization.py
.github/workflows/: ci.yml
baselines/: cvt_map_elites.py
demo/: app.py  requirements.txt
examples/: generate_responses.py  learn_to_code.json  llm_response_selection.py  responses.json  start_a_startup.json
experiments/: archive_size_ablation.py  dimensionality_scaling.py  distance_comparison.py  distance_functions.py  full_benchmark.py  lambda_ablation.py  main_comparison_20d.py  mmr_custom_distance.py  plot_distance_comparison.py  run_20d_comparison.py  run_all.py  run_benchmark.py
legacy/: GECCO_SUBMISSION_GUIDE.md  analyze_ant_compare.py  compare_results.py  map_elites_baseline.py  plot_results.py  short_experiment.py  stress_test.py  test_metrics.py
legacy/scripts/: investigate_task.py  run_benchmark.py
mmr_elites/: cli.py
paper/: Makefile  main.tex  plot_all.py  references.bib
python/: robot_arm_20d.py  run_mmr_elites.py  task.py
scripts/: cleanup_legacy.py  reproduce_paper.sh  test_bindings.py  test_correctness.py  verify_algorithms.py  verify_release.py
src/: lazy_greedy.rs  lib.rs
tasks/: ant.py  arm_20.py
tests/: conftest.py
visualization/: paper_figures.py
(+48 files in other folders)
